<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".PastResearchSunMissions">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/windProgramTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wind_program"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/windProgramText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wind_program_text"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:id="@+id/sohoProgramTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/helios_program"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sohoProgramText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soho_program_text"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:id="@+id/aceProbeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ace_program"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aceProbeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ace_program_text"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:id="@+id/stereoAProbeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stereo_program"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stereoAProbeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stereo_program_ongoing_text"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:id="@+id/dscovr_probe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dscovr_probe"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dscovr_probe_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dscovr_probe_text"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:id="@+id/parker_solar_probe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parker_solar_probe"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/parker_solar_probe_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parker_solar_probe_text"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:id="@+id/solar_probe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solar_probe"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/solar_probe_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solar_probe_text"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>