<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".PastResearchSunMissions">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pioneerSeriesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pioneer_program"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pioneerSeriesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pioneer_program_text"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:id="@+id/HeliosSeriesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/helios_program"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/heliosSeriesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/helios_program_text"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:id="@+id/iseeProgramTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isee_program"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/iseeProgramText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isee_program_text"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:id="@+id/ulyssesProgramTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ulysses_program"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ulyssesProgramText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ulysses_program_text"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:id="@+id/stereoProgramTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stereo_program"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stereoProgramText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stereo_program_text"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>