<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SunMenu">

    <Button
        android:id="@+id/buttonLearnMoreSunInformation"
        android:layout_width="174dp"
        android:layout_height="47dp"
        android:text="@string/learn_more"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonLearnMoreSolarMissions"
        android:layout_width="174dp"
        android:layout_height="47dp"
        android:text="@string/learn_more"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="411dp"
        android:layout_height="89dp"
        android:text="@string/sun_rundown"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/buttonLearnMoreSunInformation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="364dp"
        android:layout_height="52dp"
        android:inputType="none"
        android:text="@string/ended_sun_mission_count"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLearnMoreSunInformation" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="364dp"
        android:layout_height="52dp"
        android:inputType="none"
        android:text="@string/ongoing_sun_mission_count"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonLearnMoreSolarMissions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="411dp"
        android:layout_height="185dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLearnMoreSolarMissions">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sunImage1"
                android:layout_width="@dimen/width_picture_in_gallery"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/placeholder"
                android:minWidth="15dp"
                android:visibility="visible"
                app:srcCompat="@drawable/sun_image_1_small"
                tools:srcCompat="@drawable/sun_image_1_small" />

            <ImageView
                android:id="@+id/sunImage2"
                android:layout_width="@dimen/width_picture_in_gallery"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/placeholder"
                android:minWidth="15dp"
                android:visibility="visible"
                app:srcCompat="@drawable/sun_image_2_small"
                tools:srcCompat="@drawable/sun_image_2_small" />

            <ImageView
                android:id="@+id/sunImage3"
                android:layout_width="@dimen/width_picture_in_gallery"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/placeholder"
                android:minWidth="15dp"
                android:visibility="visible"
                app:srcCompat="@drawable/sun_image_3_small"
                tools:srcCompat="@drawable/sun_image_3_small" />

            <ImageView
                android:id="@+id/sunImage4"
                android:layout_width="@dimen/width_picture_in_gallery"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/placeholder"
                android:minWidth="15dp"
                android:visibility="visible"
                app:srcCompat="@drawable/sun_image_4_small"
                tools:srcCompat="@drawable/sun_image_4_small" />

            <ImageView
                android:id="@+id/sunImage5"
                android:layout_width="@dimen/width_picture_in_gallery"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/placeholder"
                android:minWidth="15dp"
                android:visibility="visible"
                app:srcCompat="@drawable/sun_image_5_small"
                tools:srcCompat="@drawable/sun_image_5_small" />

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>